# LLM_PRJ

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env  main.py  preprocessing.py  pyproject.toml
.github/workflows/: ci.yml
BACKEND/app/: main.py
BACKEND/app/api/: routers.py
BACKEND/app/api/endpoints/: auth.py  chat.py  users.py
BACKEND/app/core/: config.py  security.py
BACKEND/app/crud/: user.py
BACKEND/app/db/: session.py
BACKEND/app/models/: user.py
BACKEND/app/schemas/: chat.py  user.py
FRONTEND/: index.html  package.json  vite.config.js
FRONTEND/src/: App.jsx  main.jsx
FRONTEND/src/api/: authApi.js  chatApi.js  httpClient.js  userApi.js
FRONTEND/src/components/: AnimatedList.css  AnimatedList.jsx  CurvedLoop.css  LoginForm.css  LoginForm.jsx  RegisterForm.css  RegisterForm.jsx  ScrollStack.css  ScrollStack.jsx  StaggeredMenu.css  StaggeredMenu.jsx  Toast.jsx
FRONTEND/src/context/: ToastContext.jsx
FRONTEND/src/hooks/: authCheck.js
FRONTEND/src/pages/: AboutPage.css  AboutPage.jsx  ChatPage.css  ChatPage.jsx  HomePage.css  HomePage.jsx  LoginPage.css  LoginPage.jsx  RegisterPage.jsx
LLM/: Agent.py  Indexing.py  RAG.py  simple_llm.py
