[project]
name = "llm-prj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flagembedding>=1.2.9",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.7",
    "langchain-milvus>=0.2.1",
    "langdetect>=1.0.9",
    "langgraph>=1.0.0",
    "pymilvus>=2.6.2",
    "pymupdf>=1.26.4",
    "transformers>=4.40.2",
    "torch>=2.9.0", # GPU 버전 사용으로 설치를 따로 해야함 -> [uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu126]
    "torchvision>=0.24.0", # 위와 같이 설치됨
    "elasticsearch>=9.1.1",
]
